# dev-tips

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  LICENSE-mit  README.md  TODO  archive.2022.todo  archive.todo  backlog.todo  epi-m1.gpg  epikem-nano.gpg  public.gpg  sportIndex.md  what
.obsidian/: workspace.json
TIL/: 2019-01-23.md  2019-03-10.md  2019-03-15.md  2019-04-18.md  2019-05-13.md  2019-05-17.md  2019-05-30.md  2019-09-26.md  2019-11-15.md  2019-11-24.md  2019-12-28-blog.md  2020-01-14-algorithm-bj-12015.md  2020-01-14-ros2-setup-on-aws-arm64.md  2020-01-15-ros2-gazebo-install.md  2020-01-17-blog-pc-format.md  2020-01-19-algorithm-segment-tree.md  2020-01-24-blog-meta.md  2020-01-26-building-and-debugging-with-cpp_tools-vscode.md  2020-01-28-blog-meta.md  2020-01-29-blog-vocabo-project-fix-2.md  2020-03-23.md  2020-04-02.md  2020-04-04.md  2020-04-16.md  2020-04-21.md  2020-04-23.md  2020-04-27.md  2020-05-11.md  2020-05-25.md  2020-06-16.md  2020-06-19.md  2020-06-24.md  2020-06-25p.md  2020-06-26.md  2020-06-28.md  2020-07-02.md  2020-07-03.md  2020-07-06.md  2020-07-06p.md  2020-07-11.md  (+303 more)
algorithm/: algorithm-fast-binomial-coefficient-calculation.md  template.md
cloud/: gcp-basic-project-setup-tutorial-compute-engine-quick-start.md  template.md
cpp/: main.cpp  makefile.ps1
docker/: docker-cheat-sheet.md  docker-commit-to-save-image.md  docker-copy-host-file-to-container.md
env/: atom-windows-use-cmder-as-default-terminal.md  gpg-agent-forwarding-with-ssh.md  (+7 more)
sport/rust/solve/: .gitignore  Cargo.toml
sport/rust/solve/src/: main.rs
(+1151 files in other folders)
